--- a/warehouse/templates/includes/packaging/project-data.html
+++ b/warehouse/templates/includes/packaging/project-data.html
@@ -54,6 +54,23 @@
     </a>
   </div>
   {% endif %}
+  <div class="so-info hidden" data-name={{ release.name }}>
+    <em>StackOverflow statistics:</em>
+    <a class="vertical-tabs__tab vertical-tabs__tab--with-icon vertical-tabs__tab--condensed so-info__item"
+       data-key="html_url" data-attr="href" data-supplement="/stargazers" rel="noopener"
+       target="_blank">
+      <i class="fas fa-question-circle" aria-hidden="true"></i>
+      <strong>No. Questions: </strong>
+      <span class="so-info__item" data-key="questions_count"></span>
+    </a>
+    <a class="vertical-tabs__tab vertical-tabs__tab--with-icon vertical-tabs__tab--condensed so-info__item"
+       data-key="html_url" data-attr="href" data-supplement="/network" rel="noopener"
+       target="_blank">
+      <i class="fab fa-stack-overflow" aria-hidden="true"></i>
+      <strong>No. Accepted Answers: </strong>
+      <span class="so-info__item" data-key="answers_count"></span>
+    </a>
+ </div>
   <p>View statistics for this project via <a
           href="https://libraries.io/pypi/{{ release.project.name }}">Libraries.io</a>, or by using
     <a href="https://packaging.python.org/guides/analyzing-pypi-package-downloads/">Google
